2004/08/29 14:27 (-0400) muppetman

	* README, NEWS, Gtk2.pm: unstable development release 1.055

2004/08/29 14:23 (-0400) muppetman

	* Makefile.PL: require Glib 1.055

2004/08/29 15:01 (+0200) kaffeetisch

	* gtk2perl.h, xs/PangoTypes.xs: Remove our custom GType for
	PangoMatrix; as of version 1.5.1, pango ships with its own.

2004/08/28 01:19 (+0200) kaffeetisch

	* t/GtkTextIter.t: Fix an error introduced in the last commit.
	Found by Ross.

2004/08/25 22:21 (+0200) kaffeetisch

	* t/GtkTextIter.t: Make the [sg]et_visible_line_index and
	[sg]et_visible_line_offset tests work with newer gtk+ releases by
	checking the runtime version.

2004/08/15 18:47 (-0400) muppetman

	* README, NEWS, Gtk2.pm: unstable development release 1.054

2004/08/14 23:26 (-0400) muppetman

	* t/GtkToolbar.t: strict and warnings don't carry across file
	boundaries, so TestHelper doesn't bring them in.  add warnings and
	strict and discover that i missed some barewords.  bad muppet,
	no biscuit.

	* xs/GtkToolbar.xs: allow NULL for text in a couple of places.
	torsten had sent me a patch that did this, so i'll give him credit.

2004/08/14 23:26 (-0400) muppetman

	* t/GtkToolbar.t: rewrite test as a brute-force complete API exerciser

	* xs/GtkToolbar.xs: enhance docs for toolbar functions so they
	actually describe the parameters.  allow undef for the toolitem
	param to set_drop_highlight_item.

2004/08/01 21:10 (-0400) muppetman

	* README, NEWS, Gtk2.pm: unstable development release 1.053

	* Makefile.PL, README: require Glib 1.053

2004/08/01 18:12 (+0200) kaffeetisch

	* Makefile.PL: select_files_by_version and read_source_list_file
	were moved to Glib::MakeHelper -- adjust the function calls
	accordingly.

	* t/00.Gtk2.t, xs/Gtk2.xs: Bind and test gtk_parse_args.

	* maps_pango-1.5, t/PangoLayout.t, xs/PangoLayout.xs: Bind and
	test pango_layout_[sg]et_ellipsize.

2004/07/31 22:43 (-0400) muppetman

	* xs/GtkTreeModel.xs, t/GtkTreeModelIface.t: add